--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "「プロを目指す人のためのTypeScript入門」学習用",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
+    "node": "^16.8.0",
     "node-bin-setup": "^1.1.3"
   },
   "devDependencies": {
@@ -15,5 +17,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "volta": {
+    "node": "16.8.0"
+  }
 }
