--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
